working on outline of new JavaInspectorImpl